--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ rand = "0.9.0-beta.1"
 chrono = { version = "0.4", features = ["serde"] }
 thiserror = "2.0.11"
 tracing-subscriber = "0.3.19"
+dotenvy = "0.15"
