--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = { version = "0.6", features = ["ws", "macros"] }
+axum = { version = "0.8.1", features = ["ws", "macros"] }
 tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
 futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
 serde = { version = "1.0", features = ["derive"] }
@@ -16,3 +16,6 @@ thiserror = "2.0.11"
 tracing-subscriber = "0.3.19"
 dotenvy = "0.15"
 base62 = "0.2"
+tower-http = { version = "0.6.2", features = ["cors"] }
+http = "0.2.12"
+tower = "0.4.13"
